Make Stage 2 file storage Java 8 compatible and report recovery